--- a/index.html
+++ b/index.html
@@ -205,11 +205,7 @@
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">about me</h2>
             <h3>ENG</h3>
-            <p class="lead paragrafoBrancos">Olá! Me chamo Laura, tenho 18 anos e sou natural de Santa Maria, no Rio Grande do Sul. Estou cursando Sistemas de Informação na Universidade Franciscana (UFN). Desde muito jovem, venho trilhando uma jornada em busca de aprendizado e desenvolvimento pessoal, sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
-
-                Ingressei na universidade aos 17 anos, após ter sido aprovada no vestibular. Tenho facilidade de aprendizado e uma boa comunicação interpessoal. Sou uma pessoa pró-ativa e colaborativa, capaz de trabalhar em equipe e contribuir de forma significativa para alcançar objetivos em comum.
-                
-                Além dos estudos universitários, tenho várias metas pessoais e profissionais a serem alcançadas. Uma delas é ingressar na Aeronáutica, um objetivo que almejo alcançar desde cedo com determinação e dedicação.</p>
+            <p class="lead paragrafoBrancos">Hello! My name is Laura, I'm 18 years old and I'm from Santa Maria, Rio Grande do Sul. I'm studying Information Systems at the Franciscan University (UFN). Since I was very young, I have been on a journey in search of learning and personal development, always ready to embrace new opportunities that come my way. I entered university at 17, after passing the entrance exam. I am easy to learn and have good interpersonal communication. I am a proactive and collaborative person, capable of working in a team and contributing significantly to achieving common goals. In addition to university studies, I have several personal and professional goals to achieve. One of them is to join the Air Force, a goal that I aim to achieve from an early age with determination and dedication.</p>
         </div>
     </section>
     <section Id="depoimentos">
