--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="jumbotron text-center corPrimaria">
         <div class="contaner">
             <img src="me.png" class="foto-perfil" alt="Responsive image">
-            <h1 class="jumbotron-heading" style="color:white;text-transform: uppercase;">Laura Schneider</h1>
+            <h1 class="jumbotron-heading" style="color:rgb(199, 0, 62);text-transform: uppercase;"></h1>
             <p class="lead" style="color:white !important;">Software Developer - Student
             </p>
             <p>
@@ -156,14 +156,13 @@
             <div class="container">
                 <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
                 <blockquote class="blockquote text-center">
-                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, alem da
-                        simples dedicação nas disciplinas.</p>
+                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, alem da grande dedicação nas disciplinas.</p>
                     <footer class="blockquote-footer">Direção<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Uma profissional super focada, dedicada, pontual com seus compromissos.
-                        Interessada e super empolgada na área em que atua e nas demais, o que o torna uma profissional
+                        Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
                         pró-ativa e altamente eficiente.</p>
                     <footer class="blockquote-footer">Analista de Sistemas <cite title="Source Title">UFN</cite>
                     </footer>
@@ -249,14 +248,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function () {
-            // Animação ao passar o mouse sobre os ícones
+   
             $(".fab").hover(function () {
                 $(this).css("transform", "scale(1.2)");
             }, function () {
                 $(this).css("transform", "scale(1)");
             });
 
-            // Animação ao clicar nos ícones
+          
             $(".fab").click(function () {
                 $(this).animate({ rotation: 360 }, {
                     duration: 1000,
@@ -265,7 +264,7 @@
                     }
                 });
             });
-            $(".fab").css("font-size", "200%");
+            $(".fab").css("font-size", "250%");
         });
     </script>
 
