--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
             <p>
                 <a href="#contato" class="btn btn-dark my-2">Contato</a>
             </p>
-            <a href="#"><i style="color:white" class="fab fa-github"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-linkedin"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
+            <a href="#" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
         </div>
     </section>
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -191,8 +191,8 @@
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-success">Ver Projeto</button>
-                                    <button type="button" class="btn btn-sm btn-outline-primary">Ver Código</button>
+                                    <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
+                                    <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                 </div>
                                 <small class="text-muted">Projeto Web</small>
                             </div>
@@ -218,9 +218,11 @@
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-success">Ver Projeto</button>
-                                    <button type="button" class="btn btn-sm btn-outline-primary">Ver Código</button>
+                                    <a href="https://github.com/lauramachts0/Portfolio-Pessoal" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
+                                    <a href="https://github.com/lauramachts0/Portfolio-Pessoal" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                 </div>
+                                <small class="text-muted">Projeto Mobile</small>
+                            </div>                            
                                 <small class="text-muted">Projeto Mobile</small>
                             </div>
                         </div>
