--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
             <h3>PT-BR</h3>
-            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Santa Maria (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN). O vestibular foi vencido aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na faculdade, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfólio que você está lendo agora. 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Esta é apenas uma das muitas aventuras que planejo embarcar ao longo da minha jornada. Sou movida pela curiosidade e pelo desejo de aprendizado, sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. 
+            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Santa Maria (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN). Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Sou movida pela curiosidade e pelo desejo de aprendizado, sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. 
                 Além disso, minha facilidade de aprendizado aliada a uma boa comunicação interpessoal me tornam uma pessoa pró-ativa e colaborativa, capaz de trabalhar em equipe de forma eficaz. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
                 </p>
         </div>
@@ -145,7 +145,7 @@
             <h2 class="jumbotron-heading titulosBrancos">about me</h2>
             <h3>ENG</h3>
             <p class="lead paragrafoBrancos">Hello! I'm Laura, I'm 18 years old and I'm from Santa Maria (RS), and I'm currently studying Information Systems at the Franciscan University (UFN). I passed the entrance exam when I was 16, and since then I have immersed myself in the world of technology. I am immersed in a journey of discovery and learning. Since before I started college, I've been developing my programming skills and creating a few projects, including this portfolio you're reading now.
-                I have big goals to achieve, the main one being joining the Air Force. This is just one of the many adventures I plan to embark on along my journey. I am driven by curiosity and the desire to learn, always ready to embrace new opportunities that come my way.
+                I have big goals to achieve, the main one being joining the Air Force. I am driven by curiosity and the desire to learn, always ready to embrace new opportunities that come my way.
                 Furthermore, my ease of learning combined with good interpersonal communication make me a proactive and collaborative person, capable of working effectively in a team. I am constantly seeking personal and professional development, and I believe that each challenge faced is an opportunity for growth.
 
             </p>
