--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
-                                    <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                    <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                 </div>
                                 <small class="text-muted">Projeto Web</small>
                             </div>
