--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
         .itemMenu {
             color: white;
         }
+
+        .competencias-list {
+            font-size: larger;
+            text-align: left;
+            margin-left: 0;
+        }
+
+        .competencia-pontuacao {
+            margin-right: 5px; 
+        }
     </style>
 </head>
 
@@ -104,6 +114,9 @@
                     <a href="#projetos" class="nav-link" style=color:white> Projetos</a>
                 </li>
                 <li>
+                    <a href="#competencias" class="nav-link" style=color:white>Competências</a>
+                </li>
+                <li>
                     <a href="#sobre-mim" class="nav-link" style=color:white>Sobre mim</a>
                 </li>
                 <li>
@@ -115,7 +128,7 @@
             </ul>
         </div>
     </nav>
-
+<!--Descrição-->
     <section class="jumbotron text-center corPrimaria">
         <div class="contaner">
             <img src="me.png" class="foto-perfil" alt="Responsive image">
@@ -123,7 +136,7 @@
             <p class="lead" style="color:white !important;">Software Developer - Student
             </p>
             <p>
-                <a href="#contato" class="btn btn-dark my-2">Contato</a>
+            <a href="#contato" class="btn btn-dark my-2">Contato</a>
             </p>
             <a href="#" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="#" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
@@ -168,6 +181,24 @@
                     </footer>
                 </blockquote>
             </div>
+        </div>
+    </section>
+      <!-- Competências -->
+    <section id="competencias">
+        <div class="container">
+            <h2 class="text-center jumbotron-heading titulosVerdes">Competências Dev</h2>
+            <ul class="list-unstyled competencias-list">
+                <li><span class="competencia-pontuacao">•</span> Desenvolvimento Front-end</li>
+                <li><span class="competencia-pontuacao">•</span> HTML</li>
+                <li><span class="competencia-pontuacao">•</span> CSS</li>
+                <li><span class="competencia-pontuacao">•</span> Bootstrap</li>
+                <li><span class="competencia-pontuacao">•</span> Javascript</li>
+                <li><span class="competencia-pontuacao">•</span> Python</li>
+                <li><span class="competencia-pontuacao">•</span> C#</li>
+                <li><span class="competencia-pontuacao">•</span> Scrum</li>
+                <li><span class="competencia-pontuacao">•</span> SQL</li>
+                <li><span class="competencia-pontuacao">•</span> Banco de Dados</li>
+            </ul>
         </div>
     </section>
      <!-- Projects -->
