--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         p {
             font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
         }
-        
+        .navbar-brand{
+            font-size: 33px;
+            font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
         me{
             height: 50%; 
             width: auto;
@@ -78,7 +81,7 @@
             background-color: #1d4d5c;
         }
         h3{
-            color: #ececec;
+            color: rgb(236, 236, 236);
             margin-left: 4;
         }
         .itemMenu {
@@ -90,16 +93,14 @@
             text-align: left;
             margin-left: 0;
         }
-
         .competencia-pontuacao {
             margin-right: 5px; 
         }
     </style>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-md navbar-light" style="background-color:#2c3e50">
-        <a class="navbar-brand" href="#" style=color:white>Laura Schneider</a>
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(36, 53, 70)">
+        <a class="navbar-brand" href="#" style=color:white>Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -132,7 +133,7 @@
     <section class="jumbotron text-center corPrimaria">
         <div class="contaner">
             <img src="me.png" class="foto-perfil" alt="Responsive image">
-            <h1 class="jumbotron-heading" style="color:rgb(199, 0, 62);text-transform: uppercase;"></h1>
+            <h5 class="jumbotron-heading" style="color: white;text-transform: uppercase;">Laura Schneider</h5>
             <p class="lead" style="color:white !important;">Software Developer - Student
             </p>
             <p>
@@ -147,8 +148,8 @@
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
             <h3>PT-BR</h3>
-            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Santa Maria (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN). Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Sou movida pela curiosidade e pelo desejo de aprendizado, sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. 
+            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Santa Maria (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN).Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Sou movida pela curiosidade e pelo desejo de aprendizado, sempre pronta para abraçar novas oportunidades que surgirem no meu caminho.
                 Além disso, minha facilidade de aprendizado aliada a uma boa comunicação interpessoal me tornam uma pessoa pró-ativa e colaborativa, capaz de trabalhar em equipe de forma eficaz. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
                 </p>
         </div>
