--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         .corPrimaria {
             background-color: #1d4d5c;
-            background: linear-gradient(120deg, #286274, #2b3c42);
+            background: linear-gradient(120deg, #39869e, #2b3c42);
         }
         h3{
             color: rgb(236, 236, 236);
@@ -133,7 +133,7 @@
     <section class="jumbotron text-center corPrimaria">
         <div class="contaner">
             <img src="me.png" class="foto-perfil" alt="Responsive image">
-            <h5 class="jumbotron-heading" style="color: white;text-transform: uppercase;">Laura Schneider</h5>
+            <h5 class="jumbotron-heading" style="color: white;text-transform: uppercase;"><br>Laura Schneider</h5>
             <p class="lead" style="color:white !important;">Software Developer - Student
             </p>
             <p>
