--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         .corPrimaria {
             background-color: #1d4d5c;
-            background: linear-gradient(120deg, #39869e, #2b3c42);
+            background: linear-gradient(120deg, #4693aa, #0f3944);
         }
         h3{
             color: rgb(236, 236, 236);
