--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <p>
             <a href="#contato" class="btn btn-dark my-2">Contato</a>
             </p>
-            <a href="https://github.com/lauramachts" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
+            <a href="https://github.com/lauramachts0" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/laura-schneider-1bab1b2ba/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/_lauramachts/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
             <br>
@@ -326,7 +326,5 @@
             $(".fab").css("font-size", "260%");
         });
     </script>
-
 </body>
 
-</html>
