--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, alem da grande dedicação nas disciplinas.</p>
-                    <footer class="blockquote-footer">Direção<cite title="Source Title"> UFN</cite>
+                    <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
                 <br>
@@ -260,7 +260,7 @@
                     <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
                         Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
                         pró-ativa e altamente eficiente.</p>
-                    <footer class="blockquote-footer">Analista de Sistemas <cite title="Source Title">UFN</cite>
+                    <footer class="blockquote-footer">Ricardo Frolich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title">UFN</cite>
                     </footer>
                 </blockquote>
                 <br>
