--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="container">
                 <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
                 <blockquote class="blockquote text-center">
-                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, alem da grande dedicação nas disciplinas.</p>
+                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, além da grande dedicação nas disciplinas.</p>
                     <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
