--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                                    <li>HTML</li>
                                    <li>CSS</li>
                                    <li>Javascript</li>
+                                   <li>Bootstrap</li>
                                </ul>
                                <div class="d-flex justify-content-between align-items-center">
                                    <div class="btn-group">
