--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
                                style="height: 225px; width: 100%; display: block;">
                            <div class="card-body">
-                               <p class="card-text">Esse é um futuro projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, C e D.
+                               <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, C e D.
                                </p>
                                <ul>
                                    <li>HTML</li>
@@ -271,7 +271,7 @@
  <!-- Competências -->
  <section id="competencias">
     <div class="container">
-        <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências Dev</h2>
+        <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
         <ul class="list-unstyled competencias-list">
             <li><span class="competencia-pontuacao">•</span> Desenvolvimento Front-end</li>
             <li><span class="competencia-pontuacao">•</span> HTML</li>
