--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                            alt="Thumbnail [100%x225]" src="projeto1.png" data-holder-rendered="true"
                            style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                            <div class="card-body">
-                               <p class="card-text">Esse portfolio é um projeto que eu desenvolvi usando as tecnologias A, B.
+                               <p class="card-text">Esse portfolio é um projeto que eu desenvolvi usando as tecnologias A, B, C.
                                </p>
                                <ul>
                                    <li>HTML</li>
@@ -191,7 +191,7 @@
                                alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
                                style="height: 225px; width: 100%; display: block;">
                            <div class="card-body">
-                               <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, C e D.
+                               <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C e Y.
                                </p>
                                <ul>
                                    <li>HTML</li>
